--- a/redesign/pys.html
+++ b/redesign/pys.html
@@ -97,7 +97,7 @@
 <body onload="brython({debug:1})">
   <!-- NAVBAR START !-->
   <nav class="navbar">
-    <div class="logo-title"><img src="Images/logo.png" width="50%"></div>
+    <div class="logo-title"><img src="Images/logo.png" width="70%" height="70%"></div>
     <a href="#" class="toggle-button">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -142,13 +142,6 @@
               <optgroup id="group-dark" label="Dark"></optgroup>
             </select>
           </div>
-        </div>
-
-        <div class="settings-font-size"> 
-          <input id="font-size" class="theme-select" style="width: 40px; display:none;" 
-          type="number" min="10" max="20" value="14"  onchange="fontSizeChanged();">
-        </div>
-        <div class="settings-samples-dropdown"> 
           <div class="theme-select">
             <form name="SamplesForm" method="POST">
               <select name="samples" id="samples" style="max-width:min-content;display:block">
@@ -174,6 +167,16 @@
               </select>
             </form>
           </div>
+
+
+        </div>
+
+        <div class="settings-font-size"> 
+          <input id="font-size" class="theme-select" style="width: 40px; display:none;" 
+          type="number" min="10" max="20" value="14"  onchange="fontSizeChanged();">
+        </div>
+        <div class="settings-samples-dropdown"> 
+          
         </div>
       </div>
       <!-- EMBEDDED SETTINGS GRIP END -->
@@ -184,7 +187,7 @@
       <div id="editor""></div> </div>
       <div class=" grid-item grid-item-shell"><textarea id="console" autocomplete="off"></textarea></div>
       <div class="grid-item grid-item-unity">
-        <iframe src="index.html" style="width: 100%;height: 100%; border: none;">Browser not compatible.</iframe>
+        <iframe src="index.html" style="width: 100%;height: 100%; border: none; margin-top: 50px;">Browser not compatible.</iframe>
       </div>
     </div>
     <!-- MAIN GRID END-->
