updated library names

--- a/redesign/pys.html
+++ b/redesign/pys.html
@@ -211,7 +211,7 @@
     </table>
 
     <!--sparkpy-->
-    <script src="Scripts/parentScripts.js"></script>
+    <script src="Scripts/sparkpy.js"></script>
     <script src="Scripts/settingsRow.js"></script>
     <script src="Scripts/themes.js"></script>
     <script>
