updated fonts and added reset scene

--- a/redesign/pys.html
+++ b/redesign/pys.html
@@ -104,11 +104,11 @@
       <span class="bar"></span>
       <span class="bar"></span>
     </a>
-    <div class="navbar-links">
+    <div class="navbar-links sparkpy-fonts">
       <ul>
         <li><a href="#">Home</a></li>
+        <li><a href="#">Help</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
         <li><a href="#">Login</a></li>
       </ul>
     </div>
@@ -124,7 +124,7 @@
       <div class="settings-grid">
 
         <div class="settings-play-icon">
-          <button class="play-icon" id="run" aria-label="run"></button>
+          <button class="play-icon" id="run" aria-label="run" onclick="unityRestScene()"></button>
           <!--play button-->
         </div>
         <div class="settings-settings-icon">
