sample fixes & updated docs

--- a/redesign/pys.html
+++ b/redesign/pys.html
@@ -107,7 +107,7 @@
     <div class="navbar-links sparkpy-fonts">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="Docs\_build\html\index.html">Help</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Login</a></li>
       </ul>
