--- a/redesign/pys.html
+++ b/redesign/pys.html
@@ -106,9 +106,9 @@
     </a>
     <div class="navbar-links sparkpy-fonts">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="pys.html">Home</a></li>
         <li><a href="Docs\_build\html\index.html">Help</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Login</a></li>
       </ul>
     </div>
