--- a/redesign/about.html
+++ b/redesign/about.html
@@ -33,10 +33,14 @@
             </p>
             <p>
                 Sparkpy uses interactive 3D graphics and the Python programming language as a way of 
-                creating intuative visually appealing computer programs, whether you're a complete beginner or
-                a seasoned pro we're sure Sparkpy has somethig for you.
+                creating intuative, visually engaging computer programs. Whether you're a complete beginner or
+                a seasoned pro we're sure Sparkpy has somethig for you. <a href="Docs\_build\html\index.html">Get started</a>
+            </p>
+            <h3>Contact</h3>
+            <p>
+                hello@sparkpy.net 
             </p>
         </div>
-        <script src="Scripts/sparkpy.js"></script> 
+        <script src="Scripts/sparkpy.js"></script>
     </body>
 </html>
