added trails samples

--- a/pys.html
+++ b/pys.html
@@ -167,6 +167,12 @@
                 <optgroup label="Delays">
                   <option value="Samples/9-PrimitivesWithSleep.py">1-Primivitves with sleep</option>
                 </optgroup>
+                <optgroup label="LOGO- Trails">
+                  <option value="Samples/10-TrailsBasicLine.py">1-Line</option>
+                  <option value="Samples/11-TrailsSquare.py">1-Square</option>
+                  <option value="Samples/12-TrailsMuSquare.py">2-Multi Colour Square</option>
+                  <option value="Samples/13-TrailsHex.py">3 Hexagon</option>
+                </optgroup>
 
               </select>
             </form>
