--- a/about.html
+++ b/about.html
@@ -42,5 +42,17 @@
             </p>
         </div>
         <script src="Scripts/sparkpy.js"></script>
+
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3QCQRGS7F"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W3QCQRGS7F');
+        </script>
+
     </body>
 </html>
