--- a/pys.html
+++ b/pys.html
@@ -271,6 +271,18 @@
 
     </script>
 
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3QCQRGS7F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W3QCQRGS7F');
+  </script>
+
+
 </body>
 
 </html>
