added fav icons

--- a/pys.html
+++ b/pys.html
@@ -3,6 +3,9 @@
 
 <head>
 
+  <link rel="icon" type="image/x-icon" href="Images/logo-icons/favicon.ico">
+  
+
   <!-- sparkpy -->
   <link rel="stylesheet" href="CSS/sparkpy.css">
   <!--main styling-->
