added icons to docs

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <!-- sparkpy -->
         <link rel="stylesheet" href="CSS/sparkpy.css">
         <title>sparkpy</title>
+        <link rel="icon" type="image/x-icon" href="Images/logo-icons/favicon.ico">
     </head>
 
     <body>
