--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/sparkpy-graphics-engine-build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/sparkpy-graphics-engine-build.data.br",
-        frameworkUrl: buildUrl + "/sparkpy-graphics-engine-build.framework.js.br",
-        codeUrl: buildUrl + "/sparkpy-graphics-engine-build.wasm.br",
+        dataUrl: buildUrl + "/sparkpy-graphics-engine-build.data.unityweb",
+        frameworkUrl: buildUrl + "/sparkpy-graphics-engine-build.framework.js.unityweb",
+        codeUrl: buildUrl + "/sparkpy-graphics-engine-build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "sparkpy",
         productName: "sparkpy-graphics-engine",
@@ -100,14 +100,13 @@
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
-       
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
-          parent.unint = unityInstance; //*add this line* if you get a new unity generated index.html 
-          window.parent.postMessage('message');//tells the parent unity has loaded *add this line* if you get a new unity generated index.html 
+          parent.unint = unityInstance; //*add this line* if you get a new unity generated index.html
+          window.parent.postMessage('message');//tells the parent unity has loaded *add this line* if you get a new unity generated index.html
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
