--- a/pys.html
+++ b/pys.html
@@ -117,10 +117,10 @@
     </a>
     <div class="navbar-links sparkpy-fonts" id="navbar-links-id">
       <ul>
-        <li><a href="pys.html">Home</a></li>
-        <li><a href="Docs\_build\html\index.html">Help</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Login</a></li>
+        <!-- <li><a href="pys.html">Home</a></li>!-->
+        <li><a href="Docs\_build\html\index.html">Start Here</a></li>
+        <li><a href="about.html">About</a></li> 
+        <li><a href="#">Login</a></li> 
       </ul>
     </div>
   </nav>
@@ -162,24 +162,23 @@
                   <option value="Samples/1-CreateEnvironment.py">1-Create Environment</option>
                   <option value="Samples/2-CreateCharacter.py">2-Create Character</option>
                   <option value="Samples/3-SetAnimation.py">3-Set Animation</option>
-                  <option value="Samples/4-ControlMode.py">4-Control Mode</option>
-                  <option value="Samples/5-Sounds.py">5-Sounds</option>
+                  <option value="Samples/4-KeyboardControl.py">4-Keyboard Control</option>
+                  <option value="Samples/4-ThirdPersonControl.py">5-Third Person Control</option>
+                  <option value="Samples/5-Sounds.py">6-Sounds</option>
                 </optgroup>
                 <optgroup label="Special Effects">
                   <option value="Samples/7-SimpleEffects.py">1-Simple Effect</option>
                   <option value="Samples/8-AdvancedEffects.py">2-Advanced Effect</option>
-                </optgroup>
-                <optgroup label="Physics">
-                  <option value="Samples/6-Collisions.py">1-Collisions</option>
-                </optgroup>
-                <optgroup label="Delays">
-                  <option value="Samples/9-PrimitivesWithSleep.py">1-Primivitves with sleep</option>
                 </optgroup>
                 <optgroup label="LOGO- Trails">
                   <option value="Samples/10-TrailsBasicLine.py">1-Line</option>
                   <option value="Samples/11-TrailsSquare.py">1-Square</option>
                   <option value="Samples/12-TrailsMuSquare.py">2-Multi Colour Square</option>
                   <option value="Samples/13-TrailsHex.py">3 Hexagon</option>
+                </optgroup>
+                <optgroup label="Mini Games">
+                  <option value="Samples/14-Numbers.py">Number Guessing</option>
+                  <option value="Samples/15-Quiz.py">Quiz</option>
                 </optgroup>
 
               </select>
