added production and development build folders

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
+      var buildUrl = "Build_Pro";
       var loaderUrl = buildUrl + "/sparkpy-graphics-engine-build.loader.js";
       var config = {
         dataUrl: buildUrl + "/sparkpy-graphics-engine-build.data.br",
