--- a/pys.html
+++ b/pys.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="Images/logo-icons/favicon.ico">
   
 
@@ -100,7 +100,7 @@
   smp.bind("change", selectSample)
 
  
-
+ 
 
   </script>
   <script src="brython/ace/ace.js" type="text/javascript" charset="utf-8"></script>
