added on hover text
-run/load/save/settings etc on hover

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <body>
         <!-- NAVBAR START !-->
         <nav class="navbar">
-            <div class="logo-title"><img src="Images/logo.png" width="70%" height="70%"></div>
+            <div class="logo-title"><a href="/"> <img src="Images/logo.png" width="70%" height="70%"></a></div>
             <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -19,10 +19,10 @@
             </a>
             <div class="navbar-links sparkpy-fonts">
             <ul>
-                <li><a href="pys.html">Home</a></li>
-                <li><a href="Docs\_build\html\index.html">Help</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="Docs\_build\html\index.html">Start Here</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#">Login</a></li>
+                <!-- <li><a href="#">Login</a></li> !-->
             </ul>
             </div>
         </nav>
