--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <body>
         <!-- NAVBAR START !-->
         <nav class="navbar">
-            <div class="logo-title"><img src="Images/logo.png" width="70%" height="70%"></div>
+            <div class="logo-title"><a href="/"> <img src="Images/logo.png" width="70%" height="70%"></a></div>
             <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -21,8 +21,8 @@
             </a>
             <div class="navbar-links sparkpy-fonts">
             <ul>
-                <li><a href="pys.html">Home</a></li>
-                <li><a href="Docs\_build\html\index.html">Help</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="Docs\_build\html\index.html">Start here</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
