--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           parent.unint = unityInstance; //KP *add this line* if you get a new unity generated index.html
-          window.parent.postMessage('message');//KP tells the parent unity has loaded *add this line* if you get a new unity generated index.html
+          window.parent.postMessage('unity_ready');//KP tells the parent unity has loaded *add this line* if you get a new unity generated index.html
           loadingBar.style.display = "none";
           fullscreenButton.onclick = () => {
             unityInstance.SetFullscreen(1);
